# kindle-cap

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-ci.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/ai-readability/: 2026-05-20.md
docs/ocr-bench/: 2026-04-28.md
docs/superpowers/plans/: 2026-04-25-kindle-screenshot.md
docs/superpowers/specs/: 2026-04-25-kindle-screenshot-design.md
specs/: 01-scanner.md  02-calibre-client.md  03-registry.md  04-converter.md  05-cli.md  06-config.md
src/book_ocr/: __init__.py  cli.py  models.py  orchestrator.py  preflight.py  protocols.py  writer.py
src/book_ocr/engines/: __init__.py  yomitoku.py
src/book_ocr/exporters/: __init__.py  book_md.py  json_index.py  page_md.py
src/kindle_calibre/: __init__.py  cli.py
src/kindle_calibre/core/: calibre.py  config.py  converter.py  registry.py  scanner.py
src/kindle_cap/: __init__.py  capture.py  cli.py  config.py  keys.py  library.py  orchestrator.py  pdf.py  preflight.py  window.py
tests/: conftest.py
tests/integration/: test_book_ocr_yomitoku.py  test_real_capture.py  test_real_capture_module.py  test_real_keys.py  test_real_preflight.py  test_real_window.py
tests/unit/: test_book_ocr_cli.py  test_book_ocr_engine.py  test_book_ocr_exporters.py  test_book_ocr_models.py  test_book_ocr_orchestrator.py  test_book_ocr_preflight.py  test_book_ocr_writer.py  test_book_ocr_yomitoku.py  test_calibre_client.py  test_capture.py  test_cli.py  test_config.py  test_converter.py  test_keys.py  test_library.py  test_orchestrator.py  test_pdf.py  test_preflight.py  test_registry.py  test_scanner.py  test_window.py
