[project]
name = "kindle-cap"
version = "0.1.0"
description = "Capture Kindle for Mac pages into a single PDF"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16",
    "img2pdf>=0.5",
    "pillow>=10.0",
]

[project.scripts]
kindle-cap = "kindle_cap.cli:run_capture"
kindle-cap-pdf = "kindle_cap.cli:run_rebuild_pdf"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pypdf>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires Kindle.app running with a book on the first page",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_cap"]
