[project]
name = "kindle-cap"
version = "0.1.0"
description = "Capture Kindle for Mac pages into a single PDF (個人利用 CLI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Takumi" },
]
keywords = ["kindle", "screenshot", "pdf", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.16",
    "img2pdf>=0.5",
    "pillow>=10.0",
]

[project.optional-dependencies]
ocr = [
    "yomitoku>=0.4",
    "tqdm>=4.0",
]

[project.urls]
Repository = "https://github.com/padawansato/kindle-cap"
Issues = "https://github.com/padawansato/kindle-cap/issues"

[project.scripts]
kindle-cap = "kindle_cap.cli:run_capture"
kindle-cap-pdf = "kindle_cap.cli:run_rebuild_pdf"
book-ocr = "book_ocr.cli:run_ocr"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pypdf>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires Kindle.app running with a book on the first page",
    "live_ocr: requires yomitoku binary and sample PNGs (PoC artifacts) to be present",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line-too-long: ruff format に任せる
    "RUF001", # ambiguous-unicode-character-string: 日本語多用のため無効化
    "RUF002", # ambiguous-unicode-character-docstring: 同上
    "RUF003", # ambiguous-unicode-character-comment: 同上
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"src/kindle_cap/cli.py" = ["B008"]  # typer.Option / typer.Argument の標準パターン
"src/book_ocr/cli.py" = ["B008"]  # typer.Option / typer.Argument の標準パターン
"tests/**/*.py" = ["B017"]  # frozen dataclass の不変性検証で bare Exception を使う

[tool.mypy]
python_version = "3.12"
strict = true
# サードパーティの型情報が無いライブラリは untyped 許容（漸進的に厳格化）
[[tool.mypy.overrides]]
module = ["img2pdf", "img2pdf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yomitoku", "yomitoku.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tqdm", "tqdm.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_cap", "src/book_ocr"]
